--- a/PYTHON/PP-funciones_intro.ipynb
+++ b/PYTHON/PP-funciones_intro.ipynb
@@ -19,51 +19,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    print(f' la suma de {a} + {b} = str(a+b)')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def suma(a,b):\n",
     "\n",
-    "  for i in (a,b):\n",
+    "  for c in suma:\n",
     "\n",
     "    if a == ' ' and b ==' ':\n",
-    "     return 0\n",
+    "     print(0)\n",
     "    elif a==' ':\n",
-    "      return b\n",
+    "      print(\"b\")\n",
     "    elif b== ' ':\n",
-    "      return a\n",
+    "      print(\"a\")\n",
     "    else:\n",
-    "      return a+b\n",
+    "      print(\"a\" + \"b\")\n",
     "\n",
-    " print(f' la suma de {a} + {b} = str(a+b)')\n",
+    "  sumar = sum(a + b)\n",
+    "  return sumar\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " la suma de 4 + 5 = str(a+b)\n"
+     "ename": "TypeError",
+     "evalue": "suma() missing 2 required positional arguments: 'a' and 'b'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m suma()\n",
+      "\u001b[1;31mTypeError\u001b[0m: suma() missing 2 required positional arguments: 'a' and 'b'"
      ]
     }
    ],
    "source": [
-    "suma('4','5')"
+    "suma()"
    ]
   },
   {
@@ -81,36 +77,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2460130812.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/db/hp0l5_js4yv8br5y2tc3frpm0000gn/T/ipykernel_18703/2460130812.py\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    if:\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def maximo_comparacion(lista1,lista2):\n",
+    "   lista_max =[]\n",
     "\n",
-    " if\n",
-    "    lista_tuplas = zip(arr1,arr2)\n",
-    "    lista_max =[]\n",
-    "    for x in lista_tuplas:\n",
-    "       maximo = max (x)\n",
-    "       lista_max.append(maximo)\n",
-    "    else:\n",
-    "        pass\n",
-    " return lista_max\n",
+    "   for x in zip(lista1, lista2):\n",
+    "      maximo = max(x)\n",
+    "      lista_max.append(maximo)\n",
+    "      \n",
+    "   return lista_max\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,16 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[23]"
+       "[23, 64, 53, 17, 88]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,64 +123,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(13, 23), (64, 14), (15, 53), (17, 17), (88, 80)]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "arr1 = [13, 64, 15, 17, 88]\n",
-    "arr2 = [23, 14, 53, 17, 80]\n",
+    "3) El objetivo de este ejercicio es convertir un string en un nuevo string en el que cada carácter del nuevo string es \"(\" si ese carácter aparece sólo una vez en el string original, o \")\" si ese carácter aparece más de una vez en el string. Nuestro código no tiene que ser case sensitive, es decir, si hay una letra en mayúscula y en minúscula cuenta como dos apariciones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Probad la función para los siguientes strings \n",
     "\n",
-    "lista = zip(arr1,arr2)\n",
-    "laquevale =list(lista)\n",
-    "laquevale"
+    "\"din\"      =>  \"(((\"\n",
+    "\"recede\"   =>  \"()()()\"\n",
+    "\"Success\"  =>  \")())())\"\n",
+    "\"(( @\"     =>  \"))((\" \n",
+    "\"Ocvl@GamFLAFkixkS\" => \"((()(()()))))(()(\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(88, 80)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "maximo = max(laquevale)\n",
-    "maximo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in laquevale:\n"
+    "def caso(a):\n",
+    "\n",
+    "    for letra in a:\n",
+    "        if letra in a:\n",
+    "            letra == letra\n",
+    "            return \"(\"\n",
+    "        else:\n",
+    "            letra != letra  \n",
+    "            return \")\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'('"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "caso(\"Success\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -210,12 +196,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a52af493819045717511545598ab2b73dabca4ca61b402315e0ef2b43666342d"
+    "hash": "74ce4e106c5f3fb5408a2b59926dbdd162e96cafe5f5c54fb66c999b373c7a81"
    }
   }
  },
