falta el ejercicio 3

--- a/PYTHON/PP-funciones_intro.ipynb
+++ b/PYTHON/PP-funciones_intro.ipynb
@@ -19,47 +19,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def suma(a,b):\n",
+    "def funcion (a,b):\n",
+    "    if a == \" \" and b == \" \":\n",
+    "        print(\"0\")\n",
+    "    elif a == \" \":\n",
+    "        print(b)\n",
+    "    elif b == \" \":\n",
+    "        print(a)\n",
     "\n",
-    "  for c in suma:\n",
-    "\n",
-    "    if a == ' ' and b ==' ':\n",
-    "     print(0)\n",
-    "    elif a==' ':\n",
-    "      print(\"b\")\n",
-    "    elif b== ' ':\n",
-    "      print(\"a\")\n",
-    "    else:\n",
-    "      print(\"a\" + \"b\")\n",
-    "\n",
-    "  sumar = sum(a + b)\n",
-    "  return sumar\n",
-    "\n"
+    "    suma =  str(a+b)\n",
+    "    return suma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "suma() missing 2 required positional arguments: 'a' and 'b'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m suma()\n",
-      "\u001b[1;31mTypeError\u001b[0m: suma() missing 2 required positional arguments: 'a' and 'b'"
-     ]
+     "data": {
+      "text/plain": [
+       "'9'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "suma()"
+    "funcion(4,5)\n"
    ]
   },
   {
