--- a/PYTHON/PP-funciones_intro.ipynb
+++ b/PYTHON/PP-funciones_intro.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,27 +32,26 @@
     "        print(a)\n",
     "\n",
     "    suma =  str(a+b)\n",
-    "    return suma"
+    "\n",
+    "    \n",
+    "    return print (a, \",\", b,  \"-->\", suma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'9'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39 , 0 --> 39\n"
+     ]
     }
    ],
    "source": [
-    "funcion(4,5)\n"
+    "funcion(39,0)"
    ]
   },
   {
@@ -137,39 +136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def caso(a):\n",
-    "\n",
-    "    for letra in a:\n",
-    "        if letra in a:\n",
-    "            letra == letra\n",
-    "            return \"(\"\n",
-    "        else:\n",
-    "            letra != letra  \n",
-    "            return \")\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'('"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "caso(\"Success\")\n"
+    "\n"
    ]
   }
  ],
