Ejercicio 3 agregado.Faltan los BONUS

--- a/PYTHON/PP-funciones_intro.ipynb
+++ b/PYTHON/PP-funciones_intro.ipynb
@@ -136,18 +136,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "def simbolos(palabra):\n",
+    "\n",
+    "    \n",
+    "  letra_r = ')'\n",
+    "  letra_nr = '('\n",
+    "  palabra_simbolo = []\n",
+    "    #palabra_list = list(palabra)\n",
+    "  \n",
+    "  for letra in palabra:\n",
+    "    #for letra in palabra_list:\n",
+    "      #palabra_list = list(palabra)\n",
+    "        if (list(palabra)).count (letra) >=2:\n",
+    "      #if palabra_list.count('letra') > 2:\n",
+    "            palabra_simbolo.append(letra_r)\n",
+    "       \n",
+    "        else:\n",
+    "            palabra_simbolo.append(letra_nr)\n",
+    "    \n",
+    "  \n",
+    "  return  ''.join(palabra_simbolo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(((((((()(())(()('"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#prueba: \"Ocvl@GamFLAFkixkS\" => \"((()(()()))))(()(\"\n",
+    "\n",
+    "simbolos(\"Ocvl@GamFLAFkixkS\")\n",
+    "\n",
+    "#NO ES CASE SENSITIVE (Entendemos que eso pide la consigna)\n"
    ]
   }
  ],
