--- a/PYTHON/PP-funciones_argumentos.ipynb
+++ b/PYTHON/PP-funciones_argumentos.ipynb
@@ -41,43 +41,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def saludo (año1, despedida = \"Nos vemos el proximo año\"):\n",
-    "    proximo_año = []\n",
-    "    año2 = list(año1)\n",
-    "    for x in año1:\n",
-    "        if x in año2:\n",
-    "           if año2.count(x) > 1:\n",
-    "            result = x + 1\n",
-    "            proximo_año.append(result)\n",
+    "def cumple (año):\n",
     "\n",
-    "    return proximo_año\n",
-    "\n"
+    "\n",
+    "    while len(set(str(año))) != 4:\n",
+    "        año +=1                     #año + 1 porque lo más lógico sería intentar felicitarle al año siguiente.\n",
+    "    return f\"Nos vemos en {año}\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m saludo(\u001b[39m2015\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn [6], line 3\u001b[0m, in \u001b[0;36msaludo\u001b[1;34m(año1, despedida)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msaludo\u001b[39m (año1, despedida \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mNos vemos el proximo año\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m      2\u001b[0m     proximo_año \u001b[39m=\u001b[39m []\n\u001b[1;32m----> 3\u001b[0m     año2 \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39;49m(año1)\n\u001b[0;32m      4\u001b[0m     \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m año1:\n\u001b[0;32m      5\u001b[0m         \u001b[39mif\u001b[39;00m x \u001b[39min\u001b[39;00m año2:\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
+     "data": {
+      "text/plain": [
+       "'Nos vemos en 1023'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "saludo(2015, desp)"
+    "cumple (1001)"
    ]
   },
   {
@@ -91,10 +84,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "contenido = 10\n",
+    "perdida = 10  #Esto es un %\n",
+    "umbral = 5  #Esto es un %\n",
+    "\n",
+    "dias_vida = 0  #establecemos esta variable como contador"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#vamos a pasar el umbral a %\n",
+    "umbral = contenido * umbral/100\n",
+    "umbral"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9.0\n",
+      "8.1\n",
+      "7.289999999999999\n",
+      "6.560999999999999\n",
+      "5.9049\n",
+      "5.31441\n",
+      "4.782969\n",
+      "4.3046720999999994\n",
+      "3.8742048899999997\n",
+      "3.4867844009999995\n",
+      "3.1381059608999995\n",
+      "2.8242953648099993\n",
+      "2.5418658283289997\n",
+      "2.2876792454960997\n",
+      "2.0589113209464895\n",
+      "1.8530201888518407\n",
+      "1.6677181699666566\n",
+      "1.500946352969991\n",
+      "1.3508517176729917\n",
+      "1.2157665459056926\n",
+      "1.0941898913151233\n",
+      "0.9847709021836111\n",
+      "0.8862938119652499\n",
+      "0.797664430768725\n",
+      "0.7178979876918524\n",
+      "0.6461081889226672\n",
+      "0.5814973700304005\n",
+      "0.5233476330273604\n"
+     ]
+    }
+   ],
+   "source": [
+    "while contenido >= umbral:\n",
+    "    print(contenido) #vamos a ver el resultado desde el punto de vista de la cantidad\n",
+    "    contenido -= contenido * perdida/100\n",
+    "    dias_vida += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dias_vida   #Este es el total de días que nuestro evaporador puede funcionar."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,6 +206,36 @@
    "source": [
     "5 - Probablemente conozcais el sistema de \"me gusta\" de Facebook y otras páginas. La gente puede dar \"me gusta\" a las publicaciones del blog, a las imágenes o a otros elementos. Queremos crear el texto que debe mostrarse junto a dicho elemento.\n",
     "Cread una función que toma una lista que contiene los nombres de las personas a las que les gusta un artículo. Debe devolver el texto que se muestra en los ejemplos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nombres = [\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\", \"Mariana\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resto = len(nombres[2:]) #Cuando tengo más de 3 personas la respuesta cambia, por eso queremos saber en qué punto de la lista esto sucede.\n",
+    "resto"
    ]
   }
  ],
