Agrego ejercicio 5, pendientes 1 y 4

--- a/PYTHON/PP-funciones_argumentos.ipynb
+++ b/PYTHON/PP-funciones_argumentos.ipynb
@@ -237,11 +237,54 @@
     "resto = len(nombres[2:]) #Cuando tengo más de 3 personas la respuesta cambia, por eso queremos saber en qué punto de la lista esto sucede.\n",
     "resto"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def me_gusta(*args):\n",
+    "\n",
+    "    resto = len(args)-2\n",
+    "\n",
+    "    if len(args) ==0:\n",
+    "        return f'A nadie le gusta esto'\n",
+    "    elif len (args) == 1:\n",
+    "        return f'A {(args[0]).capitalize()} le gusta esto'\n",
+    "    elif len(args)== 2:\n",
+    "        return f'A {(args[0]).capitalize()} y {(args[1]).capitalize()} les gusta esto'\n",
+    "    elif len(args)==3:\n",
+    "        return f'A {(args[0]).capitalize()}, {(args[1]).capitalize()} y {(args[2]).capitalize()} les gusta esto'\n",
+    "    elif len(args)>=4:\n",
+    "        return f'A {(args[0]).capitalize()}, {(args[1]).capitalize()}  y {resto} mas les gusta esto'\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Ana, Pepe  y 3 mas les gusta esto'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "me_gusta('ana','pepe', 'maria', 'emma', 'santiago')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -255,12 +298,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "74ce4e106c5f3fb5408a2b59926dbdd162e96cafe5f5c54fb66c999b373c7a81"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
