Todos los enunciados listos

--- a/PYTHON/PP-funciones_argumentos.ipynb
+++ b/PYTHON/PP-funciones_argumentos.ipynb
@@ -4,7 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## FUNCIONES ARGUMENTOS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1 - Vamos a crear una \"Calculadora de puntos\". Tenéis que escribir una calculadora que reciba cadenas de caracteres como entrada. Los puntos representarán el número de la ecuación. Habrá puntos en un lado, un operador, y puntos de nuevo después del oparador. Los puntos y el operador estarán separados por un espacio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculadora_puntos(caract1, caract2, operacion ='suma'):\n",
+    "\n",
+    "    if operacion  == 'suma':\n",
+    "        cantidad_puntos = caract1.count('.',0 ,len(caract1)) + caract2.count('.',0 ,len(caract2))\n",
+    "        return \".\"*cantidad_puntos\n",
+    "\n",
+    "    elif operacion == 'resta':\n",
+    "        if caract1 < caract2:\n",
+    "            return f'El resultado de {caract1} - {caract2} en negativo' \n",
+    "        cantidad_puntos = caract1.count('.',0 ,len(caract1)) - caract2.count('.',0 ,len(caract2))\n",
+    "        return \".\"*cantidad_puntos\n",
+    "\n",
+    "    elif operacion == 'multiplicacion':\n",
+    "        cantidad_puntos = caract1.count('.',0 ,len(caract1)) * caract2.count('.',0 ,len(caract2))\n",
+    "        return \".\"*cantidad_puntos\n",
+    "\n",
+    "    elif operacion == 'division':\n",
+    "        cantidad_puntos = caract1.count('.',0 ,len(caract1)) // caract2.count('.',0 ,len(caract2)) \n",
+    "        return \".\"*cantidad_puntos\n",
+    "\n",
+    "    else:\n",
+    "        pass"
    ]
   },
   {
@@ -16,16 +53,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'El resultado de .. - ... en negativo'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def calculadora_puntos (caract1,caract2,operacion = \"suma\"):\n",
-    "    letra_caracter = \".\"\n",
-    "    for letra in caract1:\n",
-    "        letra_caracter*(str(caract1))\n",
-    "    if operacion == \"suma\":\n",
-    "        return caract1 + caract2"
+    "calculadora_puntos('..','...','resta') #Probamos que funciona."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora_puntos('..','..','resta') #Probamos que funciona."
    ]
   },
   {
@@ -41,12 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cumple (año):\n",
-    "\n",
     "\n",
     "    while len(set(str(año))) != 4:\n",
     "        año +=1                     #año + 1 porque lo más lógico sería intentar felicitarle al año siguiente.\n",
@@ -55,22 +117,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Nos vemos en 1023'"
+       "'Nos vemos en 2013'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cumple (1001)"
+    "cumple (2001) #Comprobamos que funciona."
    ]
   },
   {
@@ -84,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +168,7 @@
        "0.5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +238,7 @@
        "29"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,10 +257,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def es_numero_primo(num):\n",
+    "\n",
+    "   if num >1:\n",
+    "      for x in range (2,num -1) :\n",
+    "            if  num % x == 0:\n",
+    "                return False\n",
+    "      return True\n",
+    "   return f'{num} no cumple la condicion de los numeros primos'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es_numero_primo(9)#Comprobamos que funcione."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,16 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombres = [\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\", \"Mariana\"]"
+    "nombres = [\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\", \"Mariana\"] #Definimos la lista de nombres."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +319,7 @@
        "3"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -272,19 +363,19 @@
        "'A Ana, Pepe  y 3 mas les gusta esto'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "me_gusta('ana','pepe', 'maria', 'emma', 'santiago')"
+    "me_gusta('ana','pepe', 'maria', 'emma', 'santiago') #Comprobamos que funcione."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -298,12 +389,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "a52af493819045717511545598ab2b73dabca4ca61b402315e0ef2b43666342d"
    }
   }
  },
