--- a/PYTHON/PP-funciones_argumentos.ipynb
+++ b/PYTHON/PP-funciones_argumentos.ipynb
@@ -301,36 +301,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nombres = [\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\", \"Mariana\"] #Definimos la lista de nombres."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resto = len(nombres[2:]) #Cuando tengo más de 3 personas la respuesta cambia, por eso queremos saber en qué punto de la lista esto sucede.\n",
-    "resto"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -375,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -389,12 +359,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a52af493819045717511545598ab2b73dabca4ca61b402315e0ef2b43666342d"
+    "hash": "74ce4e106c5f3fb5408a2b59926dbdd162e96cafe5f5c54fb66c999b373c7a81"
    }
   }
  },
