--- a/PYTHON/PP-funciones_intro.ipynb
+++ b/PYTHON/PP-funciones_intro.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# FUNCIONES INTRO #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1)Cread una función que reciba 2 números enteros en forma de string como entrada, y dé como resultado la suma (también en forma de string)\n",
     "Condiciones:\n",
     "Si los dos parámetros que recibe la función son strings vacíos la función nos debe devolver \"0\"\n",
