--- a/PYTHON/PP-ficheros.ipynb
+++ b/PYTHON/PP-ficheros.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
     "    import os \n",
     "    from os import getcwd\n",
     "    ruta = os.getcwd\n",
-    "    ruta_nueva = ruta+\"/\"+primera_carpeta\n",
+    "    \n",
     "\n",
     "    if primera_carpeta in os.listdir():\n",
     "        print (\"Esta carpeta ya existe\")\n",
@@ -62,39 +62,193 @@
     "        os.mkdir(primera_carpeta)\n",
     "        print(f\"La carpeta de {primera_carpeta} se ha creado\")\n",
     "        \n",
-    "    if segunda_carpeta in os.listdir(segunda_carpeta):\n",
-    "            print(\"Esta carpeta ya existe\")\n",
-    "    elif segunda_carpeta not in os.listdir(primera_carpeta):\n",
-    "            os.mkdir(segunda_carpeta)\n",
-    "            print(f\"La carpeta de {segunda_carpeta} se ha creado\")"
+    "    if segunda_carpeta in os.listdir():\n",
+    "                    print(\"Esta carpeta ya existe\")\n",
+    "    elif segunda_carpeta not in os.listdir():\n",
+    "            os.mkdir(f'{primera_carpeta}/{segunda_carpeta}')\n",
+    "            print(f\"La carpeta de {segunda_carpeta} se ha creado\")\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'builtin_function_or_method' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [24], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m primera_funcion(\u001b[39m\"\u001b[39;49m\u001b[39maprendiendo-ficheros\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mdatos\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39msaludo.txt\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn [23], line 6\u001b[0m, in \u001b[0;36mprimera_funcion\u001b[1;34m(primera_carpeta, segunda_carpeta, nombre_propio)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mos\u001b[39;00m \u001b[39mimport\u001b[39;00m getcwd\n\u001b[0;32m      5\u001b[0m ruta \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mgetcwd\n\u001b[1;32m----> 6\u001b[0m ruta_nueva \u001b[39m=\u001b[39m ruta\u001b[39m+\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m+\u001b[39mprimera_carpeta\n\u001b[0;32m      8\u001b[0m \u001b[39mif\u001b[39;00m primera_carpeta \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir():\n\u001b[0;32m      9\u001b[0m     \u001b[39mprint\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39mEsta carpeta ya existe\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'builtin_function_or_method' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esta carpeta ya existe\n",
+      "La carpeta de datos se ha creado\n"
      ]
     }
    ],
    "source": [
     "primera_funcion(\"aprendiendo-ficheros\",\"datos\",\"saludo.txt\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def primera_funcion (primera_carpeta, segunda_carpeta, nombre_propio):\n",
+    "\n",
+    "    import os \n",
+    "    from os import getcwd\n",
+    "    ruta = os.getcwd ()\n",
+    "    print(f' Te encuentras en {ruta}')\n",
+    "    \n",
+    "\n",
+    "    if primera_carpeta in os.listdir():\n",
+    "        print (\"Esta carpeta ya existe\")\n",
+    "    elif primera_carpeta not in os.listdir():\n",
+    "        os.mkdir(primera_carpeta)\n",
+    "        print(f\"La carpeta de {primera_carpeta} se ha creado\")\n",
+    "\n",
+    "    \n",
+    "    os.chdir(f'{primera_carpeta}')\n",
+    "    nueva_ruta =os.getcwd()\n",
+    "    print(f'Ahora estas aqui {nueva_ruta}')\n",
+    "  \n",
+    "        \n",
+    "    if segunda_carpeta in os.listdir():\n",
+    "                    print(\"Esta carpeta ya existe\")\n",
+    "    elif segunda_carpeta not in os.listdir():\n",
+    "            os.mkdir(f'{primera_carpeta}/{segunda_carpeta}')\n",
+    "            print(f\"La carpeta de {segunda_carpeta} se ha creado\")\n",
+    "\n",
+    "    nueva_ruta2 =os.getcwd()\n",
+    "    print(f'Ahora estas aqui {nueva_ruta2}')\n",
+    "  \n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Te encuentras en /Users/anamor/ADALAB/PairProgramming/DA_PromoC_Modulo1_Sprint2_Noemi-Anahi/PYTHON/aprendiendo-ficheros\n",
+      "La carpeta de aprendiendo-ficheros se ha creado\n",
+      "Ahora estas aqui /Users/anamor/ADALAB/PairProgramming/DA_PromoC_Modulo1_Sprint2_Noemi-Anahi/PYTHON/aprendiendo-ficheros/aprendiendo-ficheros\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'aprendiendo-ficheros/datos'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m primera_funcion(\u001b[39m'\u001b[39;49m\u001b[39maprendiendo-ficheros\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mdatos\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39msaludo.txt\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn [9], line 24\u001b[0m, in \u001b[0;36mprimera_funcion\u001b[0;34m(primera_carpeta, segunda_carpeta, nombre_propio)\u001b[0m\n\u001b[1;32m     22\u001b[0m                 \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEsta carpeta ya existe\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[39melif\u001b[39;00m segunda_carpeta \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir():\n\u001b[0;32m---> 24\u001b[0m         os\u001b[39m.\u001b[39;49mmkdir(\u001b[39mf\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m{\u001b[39;49;00mprimera_carpeta\u001b[39m}\u001b[39;49;00m\u001b[39m/\u001b[39;49m\u001b[39m{\u001b[39;49;00msegunda_carpeta\u001b[39m}\u001b[39;49;00m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     25\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mLa carpeta de \u001b[39m\u001b[39m{\u001b[39;00msegunda_carpeta\u001b[39m}\u001b[39;00m\u001b[39m se ha creado\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     27\u001b[0m nueva_ruta2 \u001b[39m=\u001b[39mos\u001b[39m.\u001b[39mgetcwd()\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'aprendiendo-ficheros/datos'"
+     ]
+    }
+   ],
+   "source": [
+    "primera_funcion('aprendiendo-ficheros','datos','saludo.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/anamor/ADALAB/PairProgramming/DA_PromoC_Modulo1_Sprint2_Noemi-Anahi/PYTHON'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('aprendiendo-ficheros')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/anamor/ADALAB/PairProgramming/DA_PromoC_Modulo1_Sprint2_Noemi-Anahi/PYTHON/aprendiendo-ficheros'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"../aprendiendo-ficheros\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/anamor/ADALAB/PairProgramming/DA_PromoC_Modulo1_Sprint2_Noemi-Anahi/PYTHON/aprendiendo-ficheros/aprendiendo-ficheros'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -108,12 +262,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "74ce4e106c5f3fb5408a2b59926dbdd162e96cafe5f5c54fb66c999b373c7a81"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
